# Shark-ISR-Vtol

./: .gitignore  CLAUDE.md  KICKOFF_PROMPT.md  README.md  USAGE_PLAN.md  index.html
.claude/: settings.local.json
docs/: ARCHITECTURE.md  AUDIT_2026-07-03.md  BUILD_PLAN.md  DECISIONS.md  HARDWARE_BRINGUP.md  HARDWARE_RECOMMENDATIONS.md  HORNET_PLATFORM.md  REGULATORY.md  ROADMAP.md  SITL_PROCEDURE.md
legacy/: README.md  conops-portfolio.html  conops-product.html
ros2_ws/: README.md
ros2_ws/src/shark_isr_autopilot/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/shark_isr_autopilot/config/: autopilot.yaml
ros2_ws/src/shark_isr_autopilot/launch/: autopilot.launch.py
ros2_ws/src/shark_isr_autopilot/shark_isr_autopilot/: autopilot_bridge.py  frame_transforms.py
ros2_ws/src/shark_isr_autopilot/test/: test_frame_transforms.py
ros2_ws/src/shark_isr_bringup/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/shark_isr_bringup/launch/: sitl.launch.py
ros2_ws/src/shark_isr_guidance/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/shark_isr_guidance/config/: guidance.yaml
ros2_ws/src/shark_isr_guidance/launch/: guidance.launch.py
ros2_ws/src/shark_isr_guidance/shark_isr_guidance/: bayesian_map.py  confidence_gate.py  guidance_node.py  search_pattern.py  strategies.py
ros2_ws/src/shark_isr_guidance/test/: test_bayesian_map.py  test_confidence_gate.py  test_search_pattern.py  test_strategies.py
ros2_ws/src/shark_isr_interfaces/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/shark_isr_interfaces/msg/: Detection.msg  GuidanceSetpoint.msg  SearchState.msg  VehicleState.msg
ros2_ws/src/shark_isr_interfaces/srv/: AutopilotCommand.srv  MissionCommand.srv  SetGuidanceMode.srv
ros2_ws/src/shark_isr_mission/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/shark_isr_mission/config/: mission.yaml
ros2_ws/src/shark_isr_mission/launch/: mission.launch.py
ros2_ws/src/shark_isr_mission/shark_isr_mission/: mission_node.py
ros2_ws/src/shark_isr_perception/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/shark_isr_perception/config/: perception.yaml
ros2_ws/src/shark_isr_perception/launch/: perception.launch.py
ros2_ws/src/shark_isr_perception/shark_isr_perception/: detector_node.py  geolocate.py  mock_camera_node.py
ros2_ws/src/shark_isr_perception/test/: test_geolocate.py
ros2_ws/src/shark_isr_telemetry/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/shark_isr_telemetry/config/: telemetry.yaml
ros2_ws/src/shark_isr_telemetry/launch/: telemetry.launch.py
ros2_ws/src/shark_isr_telemetry/shark_isr_telemetry/: telemetry_node.py
scripts/: meshy_gen.py  meshy_retexture.py  run_sim.sh  scaffold.sh
sim/: README.md  plot_orbit.py
sim/tests/: _ros_harness.py  run_tests.sh  t06_orbit_setpoint.py  t07_failsafe_offboard_loss.py  t08_abort_rtl.py  t09_low_battery_failsafe.py  t10_e2e_rehearsal.py  t11_perception_pipeline.py
sim/worlds/: shark_isr_coastal.sdf
site-v2/: PRODUCT.md  README.md  SITE_UPGRADE.md  package-lock.json  package.json
site-v2/app/: globals.css  layout.tsx  page.tsx
site-v2/components/: AnimatedGroup.tsx  AutonomyLoop.tsx  DetectionHUD.tsx  HardwareStack.tsx  Hero.tsx  Icons.tsx  PerceptionSection.tsx  SensorPiP.tsx
site-v2/components/3d/: ExplodedCanvas.tsx  ExplodedSection3D.tsx  MissionCanvas.tsx  MissionCanvasPro.tsx  MissionSection3D.tsx  StackCanvas.tsx  StackSection3D.tsx
site-v2/components/ui/: AuroraBackground.tsx  ShapeGrid.tsx  SplashCursor.tsx  SplitHeading.tsx
site-v2/lib/: guidance.ts  useInViewport.ts
site-v2/public/hardware/: CREDITS.md
site-v3/: .gitignore  package-lock.json  package.json
site-v3/app/: globals.css  layout.tsx  page.tsx
site-v3/components/: ExplodedView.tsx  GateDemo.tsx  Hero3D.tsx  HeroSection.tsx  Mission3D.tsx  Nav.tsx  Radar.tsx  Reveal.tsx  Sections.tsx  StackShowcase.tsx
site-v3/lib/: guidance.ts  webgl.ts
site-v3/public/models/: hornet_textured.min.glb  part_fuse_body.min.glb  part_nacelle_mount.min.glb  part_nose.min.glb  part_tail.min.glb  part_wing_port.min.glb  shark.min.glb  stack.min.glb
training/: 01_download_datasets.py  02_merge_datasets.py  03_train.py  04_export_onnx.py  README.md  check_gpu.py  debug_versions.py  requirements.txt  train_log.txt
training/merged/: sharks.yaml
training/merged/labels/: train.cache  val.cache
training/merged/labels/train/: salo_levy__Screen-Recording-2022-07-26-at-4_47_35-PM_mov-0_jpg.rf.5fa75aaf6dbd27409c5322477fb81394.txt  salo_levy__Screen-Recording-2022-07-26-at-4_47_35-PM_mov-0_jpg.rf.77eaf623743f1af970918f879c8dd5f9.txt  salo_levy__Screen-Recording-2022-07-26-at-4_47_35-PM_mov-0_jpg.rf.bf7aa5a34f5730d616d4000c958e0630.txt  salo_levy__Screen-Recording-2022-07-26-at-4_47_35-PM_mov-10_jpg.rf.6974d094218b03e19ee14a7e72e91c12.txt  salo_levy__Screen-Recording-2022-07-26-at-4_47_35-PM_mov-10_jpg.rf.a3fa0331de868b6eb231556d9175a11a.txt  salo_levy__Screen-Recording-2022-07-26-at-4_47_35-PM_mov-10_jpg.rf.efec2c275780494a2159af78e786c507.txt  salo_levy__Screen-Recording-2022-07-26-at-4_47_35-PM_mov-11_jpg.rf.5b86473fad00741f73ae1ccfd7d06822.txt  salo_levy__Screen-Recording-2022-07-26-at-4_47_35-PM_mov-11_jpg.rf.ec73f67b0d60559bcdc607a03a0aeafb.txt  salo_levy__Screen-Recording-2022-07-26-at-4_47_35-PM_mov-11_jpg.rf.eddd92f2af3dc0b506280fc3a9149c9b.txt  salo_levy__Screen-Recording-2022-07-26-at-4_47_35-PM_mov-12_jpg.rf.ae4323802c88b646e5b5b1d361a3dbbf.txt  salo_levy__Screen-Recording-2022-07-26-at-4_47_35-PM_mov-14_jpg.rf.971d630b0d071feac79ea4741ca58f93.txt  (+775 more)
(+87 files in other folders)
