<?xml version="1.0"?>
<package format="3">
  <name>shark_isr_interfaces</name>
  <version>0.1.0</version>
  <description>
    Custom msgs and srvs — the integration contract for the shark ISR autonomy stack.
    All packages depend on this; none depend on each other's internals.
  </description>
  <maintainer email="ryanhughes281@yahoo.com">Ryan Hughes</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
